--- a/src/main/resources/templates/task/create/step2.html
+++ b/src/main/resources/templates/task/create/step2.html
@@ -210,8 +210,9 @@
                                    tabindex="0" role="button">
                                     <span th:text="#{task-create.step2.view-profile-reviews}"></span>
                                 </a>
-                                <form th:action="@{/task/create/step2}" th:object="${taskInfo}" method="post">
+                                <form th:action="@{/task/create/step2}" method="post">
                                      <!--Temporary set tasker ID = 1 -->
+                                    <!--<input type="text" th:value="*{description}">-->
                                     <input type="hidden" id="tasker" name="tasker" th:value="1">
                                     <button type="submit" class="recommendations__hire-btn btn btn-primary btn-block">
                                         <span th:text="#{task-create.step2.select-continue-btn}"></span>
