--- a/src/main/webapp/app/entities/address/address-update.component.html
+++ b/src/main/webapp/app/entities/address/address-update.component.html
@@ -39,8 +39,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="taskUniteApp.address.dictrict" for="field_dictrict">Dictrict</label>
-                    <select class="form-control" id="field_dictrict" name="dictrict" formControlName="dictrictId">
+                    <label class="form-control-label" jhiTranslate="taskUniteApp.address.district" for="field_district">District</label>
+                    <select class="form-control" id="field_district" name="district" formControlName="districtId">
                         <option [ngValue]="null"></option>
                         <option [ngValue]="districtOption.id" *ngFor="let districtOption of districts; trackBy: trackDistrictById">{{districtOption.id}}</option>
                     </select>
