--- a/src/main/webapp/app/entities/user-information/user-information-update.component.html
+++ b/src/main/webapp/app/entities/user-information/user-information-update.component.html
@@ -10,6 +10,11 @@
                         readonly />
                 </div>
                 <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="taskUniteApp.userInformation.address" for="field_address">Address</label>
+                    <input type="text" class="form-control" name="address" id="field_address"
+                           formControlName="address"/>
+                </div>
+                <div class="form-group">
                     <label class="form-control-label" jhiTranslate="taskUniteApp.userInformation.gender" for="field_gender">Gender</label>
                     <input type="number" class="form-control" name="gender" id="field_gender"
                            formControlName="gender"/>
@@ -48,13 +53,6 @@
                     <select class="form-control" id="field_user" name="user" formControlName="userId">
                         <option [ngValue]="null"></option>
                         <option [ngValue]="userOption.id" *ngFor="let userOption of users; trackBy: trackUserById">{{userOption.id}}</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="taskUniteApp.userInformation.address" for="field_address">Address</label>
-                    <select class="form-control" id="field_address" name="address" formControlName="addressId">
-                        <option [ngValue]="null"></option>
-                        <option [ngValue]="addressOption.id" *ngFor="let addressOption of addresses; trackBy: trackAddressById">{{addressOption.id}}</option>
                     </select>
                 </div>
             </div>
