--- a/src/main/webapp/app/entities/user-information/user-information.component.html
+++ b/src/main/webapp/app/entities/user-information/user-information.component.html
@@ -19,6 +19,7 @@
             <thead>
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
             <th scope="col"  jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th scope="col"  jhiSortBy="address"><span jhiTranslate="taskUniteApp.userInformation.address">Address</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th scope="col"  jhiSortBy="gender"><span jhiTranslate="taskUniteApp.userInformation.gender">Gender</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th scope="col"  jhiSortBy="phone"><span jhiTranslate="taskUniteApp.userInformation.phone">Phone</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th scope="col"  jhiSortBy="status"><span jhiTranslate="taskUniteApp.userInformation.status">Status</span> <fa-icon [icon]="'sort'"></fa-icon></th>
@@ -26,13 +27,13 @@
             <th scope="col"  jhiSortBy="updatedAt"><span jhiTranslate="taskUniteApp.userInformation.updatedAt">Updated At</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th scope="col"  jhiSortBy="deletedAt"><span jhiTranslate="taskUniteApp.userInformation.deletedAt">Deleted At</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th scope="col"  jhiSortBy="userId"><span jhiTranslate="taskUniteApp.userInformation.user">User</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th scope="col"  jhiSortBy="addressId"><span jhiTranslate="taskUniteApp.userInformation.address">Address</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th scope="col"></th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor="let userInformation of userInformations ;trackBy: trackId">
                 <td><a [routerLink]="['/user-information', userInformation.id, 'view' ]">{{userInformation.id}}</a></td>
+                <td>{{userInformation.address}}</td>
                 <td>{{userInformation.gender}}</td>
                 <td>{{userInformation.phone}}</td>
                 <td>{{userInformation.status}}</td>
@@ -41,11 +42,6 @@
                 <td>{{userInformation.deletedAt | date:'medium'}}</td>
                 <td>
                     {{userInformation.userId}}
-                </td>
-                <td>
-                    <div *ngIf="userInformation.addressId">
-                        <a [routerLink]="['/address', userInformation.addressId , 'view' ]" >{{userInformation.addressId}}</a>
-                    </div>
                 </td>
                 <td class="text-right">
                     <div class="btn-group">
