--- a/src/main/webapp/app/entities/task/task-detail.component.html
+++ b/src/main/webapp/app/entities/task/task-detail.component.html
@@ -5,6 +5,14 @@
             <hr>
             <jhi-alert-error></jhi-alert-error>
             <dl class="row-md jh-entity-details">
+                <dt><span jhiTranslate="taskUniteApp.task.address">Address</span></dt>
+                <dd>
+                    <span>{{task.address}}</span>
+                </dd>
+                <dt><span jhiTranslate="taskUniteApp.task.title">Title</span></dt>
+                <dd>
+                    <span>{{task.title}}</span>
+                </dd>
                 <dt><span jhiTranslate="taskUniteApp.task.description">Description</span></dt>
                 <dd>
                     <span>{{task.description}}</span>
