Add Task Category UI

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -40,57 +40,49 @@
                 <div class="col-sm-6 col-md-4 col-lg-3 mb-3" data-aos="fade-up" data-aos-delay="100">
                     <a href="#" class="h-100 feature-item">
                         <span class="d-block icon flaticon-calculator mb-3 text-primary"></span>
-                        <h2>Accounting / Finanace</h2>
-                        <span class="counting">10,391</span>
+                        <h2>Giao hàng</h2>
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 mb-3" data-aos="fade-up" data-aos-delay="200">
                     <a href="#" class="h-100 feature-item">
                         <span class="d-block icon flaticon-wrench mb-3 text-primary"></span>
-                        <h2>Automotive Jobs</h2>
-                        <span class="counting">192</span>
+                        <h2>Lắp ráp nội thất</h2>
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 mb-3" data-aos="fade-up" data-aos-delay="300">
                     <a href="#" class="h-100 feature-item">
                         <span class="d-block icon flaticon-worker mb-3 text-primary"></span>
-                        <h2>Construction / Facilities</h2>
-                        <span class="counting">1,021</span>
+                        <h2>Làm mộc</h2>
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 mb-3" data-aos="fade-up" data-aos-delay="400">
                     <a href="#" class="h-100 feature-item">
                         <span class="d-block icon flaticon-telecommunications mb-3 text-primary"></span>
-                        <h2>Telecommunications</h2>
-                        <span class="counting">1,219</span>
+                        <h2>Sửa chữa điện</h2>
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 mb-3" data-aos="fade-up" data-aos-delay="500">
                     <a href="#" class="h-100 feature-item">
                         <span class="d-block icon flaticon-stethoscope mb-3 text-primary"></span>
-                        <h2>Healthcare</h2>
-                        <span class="counting">482</span>
+                        <h2>Mang vác nặng</h2>
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 mb-3" data-aos="fade-up" data-aos-delay="600">
                     <a href="#" class="h-100 feature-item">
                         <span class="d-block icon flaticon-computer-graphic mb-3 text-primary"></span>
-                        <h2>Design, Art &amp; Multimedia</h2>
-                        <span class="counting">5,409</span>
+                        <h2>Mua hàng hộ</h2>
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 mb-3" data-aos="fade-up" data-aos-delay="700">
                     <a href="#" class="h-100 feature-item">
                         <span class="d-block icon flaticon-trolley mb-3 text-primary"></span>
-                        <h2>Transportation &amp; Logistics</h2>
-                        <span class="counting">291</span>
+                        <h2>Chuyển nhà</h2>
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 mb-3" data-aos="fade-up" data-aos-delay="800">
                     <a href="#" class="h-100 feature-item">
                         <span class="d-block icon flaticon-restaurant mb-3 text-primary"></span>
-                        <h2>Restaurant / Food Service</h2>
-                        <span class="counting">329</span>
+                        <h2>Quét dọn</h2>
                     </a>
                 </div>
             </div>
