--- a/src/main/resources/templates/fragment/layout.html
+++ b/src/main/resources/templates/fragment/layout.html
@@ -191,6 +191,7 @@
     <script th:src="@{~/js/jquery.countdown.min.js}"></script>
     <script th:src="@{~/js/jquery.magnific-popup.min.js}"></script>
     <script th:src="@{~/js/bootstrap-datepicker.min.js}"></script>
+    <script th:src="@{~/js/moment.min.js}"></script>
     <script th:src="@{~/js/aos.js}"></script>
     <script th:src="@{~/js/main.js}"></script>
 </th:block>
