--- a/src/main/resources/templates/task/room/room.html
+++ b/src/main/resources/templates/task/room/room.html
@@ -30,14 +30,14 @@
                         <div class="row">
                             <div class="col-lg-9">
                                 <div class="task-name text-bold" style="font-size: 18px">
-                                    <div th:title="'Công việc nhà'" class="name" th:text="'Công việc nhà'"></div>
+                                    <div th:title="'Công việc nhà'" class="name" th:text="${task.title}"></div>
                                     <!--Trạng thái công việc-->
                                     <span
                                         class="ml-lg-3 badge badge-warning text-white text-bold p-2">Đang thực hiện</span>
                                     <!--                                    <span class="ml-lg-2 badge badge-danger text-white text-bold p-2">Đã hủy</span>-->
                                     <!--                                    <span class="ml-lg-2 badge badge-primary text-white text-bold p-2">Hoàn thành</span>-->
                                 </div>
-                                <div class="tasker-name mt-1">
+                                <div class="tasker-name mt-1" th:text="${task.getTasker().getUser().getUser().getFirstName() + ' ' + task.getTasker().getUser().getUser().getLastName()}">
                                     Trần Hiểu Đông
                                 </div>
                             </div>
@@ -49,7 +49,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <span class="icon-calendar-o mr-lg-3 t-green"></span>
-                                <span>22 - T11, 8:30 </span>
+                                <span th:text="">22 - T11, 8:30 </span>
                             </div>
                         </div>
                         <div class="row">
