--- a/src/main/resources/templates/task/room/room.html
+++ b/src/main/resources/templates/task/room/room.html
@@ -49,7 +49,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <span class="icon-calendar-o mr-lg-3 t-green"></span>
-                                <span th:text="">22 - T11, 8:30 </span>
+                                <span th:text="${task.schedule.from}">22 - T11, 8:30 </span>
                             </div>
                         </div>
                         <div class="row">
